# xo-game

./: .gitmodules  CMakeLists.txt  Readme.md
C++/xo/: CMakeLists.txt
C++/xo/src/core/: CMakeLists.txt  xo-tests.cpp  xo-win-conditions-tests.cpp  xo.cpp  xo.hpp
C++/xo/src/core/src/: xo.cpp  xo.hpp
C++/xo/src/core/test/: CMakeLists.txt  xo.tests.cpp
C++/xo/src/core/test/xo/: xo-game.fixture.hpp  xo-game.tests.cpp  xo-special-state.tests.cpp  xo-win-conditions.tests.cpp
C++/xo/src/core/xo/: co-tests.cpp  win-conditions-tests.cpp  xo-tests.cpp  xo.cpp  xo.hpp
C++/xo/src/ui/: CMakeLists.txt  config.hpp  main.cpp
C++/xo/src/ui/common/: clickable.cpp  clickable.hpp  drawable.hpp
C++/xo/src/ui/element/button/: button.cpp  button.hpp
C++/xo/src/ui/screen/: game-screen.cpp  game-screen.hpp  screen.hpp
C++/xo/src/ui/screen/game/: game-screen.cpp  game-screen.hpp
C++/xo/src/ui/screen/game-screen/: game-screen.cpp  game-screen.hpp
C++/xo/src/ui/screen/main-menu/: main-menu.cpp  main-menu.hpp
C++/xo/src/ui/screen/main-menu-screen/: main-menu-screen.cpp  main-menu-screen.hpp
C++/xo/src/ui/screen/screen-manager/: screen-manager.cpp  screen-manager.hpp
C++/xo/src/ui/src/: main.cpp
C++/xo/src/ui/src/common/: clickable.hpp  col.hpp  drawable.hpp  types.hpp
C++/xo/src/ui/src/common/clickable/: clickable.cpp  clickable.hpp
C++/xo/src/ui/src/common/rect/: rect.hpp
C++/xo/src/ui/src/gfx/raylib-renderer/: raylib-renderer.cpp  raylib-renderer.hpp
C++/xo/src/ui/src/gfx/renderer/: renderer.hpp
C++/xo/src/ui/src/screen/: screen.hpp
C++/xo/src/ui/src/screen/game-screen/: game-screen.cpp  game-screen.hpp
C++/xo/src/ui/src/screen/main-menu-screen/: main-menu-screen.cpp  main-menu-screen.hpp
C++/xo/src/ui/src/screen/screen-manager/: screen-manager.cpp  screen-manager.hpp
C++/xo/src/ui/src/widget/button/: button.cpp  button.hpp
C++/xo/src/ui/src/widget/cell/: cell.cpp  cell.hpp
C++/xo/src/ui/src/widget/o/: o.cpp  o.hpp  o.tests.cpp
C++/xo/src/ui/src/widget/restart-dialog/: restart-dialog.cpp  restart-dialog.hpp
C++/xo/src/ui/src/widget/x/: x.cpp  x.hpp
C++/xo/src/ui/src/widget/xo-grid/: xo-grid.cpp  xo-grid.hpp
C++/xo/src/ui/src/widget/xo-value/: xo-value.cpp  xo-value.hpp
C++/xo/src/ui/test/: CMakeLists.txt
C++/xo/src/ui/test/mock/: mock-renderer.hpp  mock-screen.hpp
C++/xo/src/ui/test/screen/: game-screen.tests.cpp  main-menu-screen.tests.cpp  mock-screen.hpp  screen-manager.tests.cpp  screen.tests.cpp
C++/xo/src/ui/test/utils/: mock-renderer.hpp
C++/xo/src/ui/test/widget/: button.tests.cpp  cell.tests.cpp  o.tests.cpp  restart-dialog.tests.cpp  x.tests.cpp  xo-grid.tests.cpp  xo-value.cpp  xo-value.tests.cpp
C++/xo/src/ui/widget/button/: button.cpp  button.hpp
C++/xo/src/ui/widget/cell/: cell.cpp  cell.hpp
C++/xo/src/ui/widget/o/: o.hpp
C++/xo/src/ui/widget/x/: x.hpp
C++/xo/src/ui/widget/xo-grid/: xo-grid.cpp  xo-grid.hpp
src/core/src/: xo.cpp  xo.hpp
src/core/test/xo/: xo-game.fixture.hpp  xo-game.tests.cpp  xo-special-state.tests.cpp  xo-win-conditions.tests.cpp
src/ui/src/: config.hpp  main.cpp
src/ui/src/common/: types.hpp
src/ui/src/gfx/raylib-renderer/: raylib-renderer.cpp
src/ui/src/gfx/renderer/: renderer.hpp
src/ui/src/screen/game-screen/: game-screen.cpp
src/ui/src/screen/main-menu-screen/: main-menu-screen.hpp
src/ui/src/screen/screen-manager/: screen-manager.hpp
src/ui/src/widget/cell/: cell.hpp
src/ui/src/widget/restart-dialog/: restart-dialog.hpp
src/ui/src/widget/xo-grid/: xo-grid.hpp
src/ui/src/widget/xo-value/: xo-value.hpp
src/ui/test/: CMakeLists.txt
src/ui/test/widget/: button.tests.cpp  cell.tests.cpp  restart-dialog.tests.cpp
